[gd_scene load_steps=3 format=2]

[ext_resource path="res://game_script/battle/AttackRange.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 10, 25 )

[node name="AttackRange" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -10, 0 )
shape = SubResource( 21 )

[connection signal="body_entered" from="." to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_AttackRange_body_exited"]
